# bmdc

./: .travis.yml  BMDC-Readme.txt  CMakeLists.txt  Credits.txt  Makefile  README.md  SConstruct  TODO.md  index.html  params.json
BMDC/: Makefile  README.md  meson.build
BMDC/dcpp/: ActionRaw.h  AdcHub.cpp  BMDCUtil.cpp  BMDCUtil.h  BackupManager.cpp  BackupManager.h  ClientManager.cpp  CommandQueue.cpp  CommandQueue.h  DebugManager.cpp  DebugManager.h  DetectionEntry.h  FavoriteManager.cpp  GeoIP.cpp  GeoIPc.h  GeoManager.cpp  GeoManager.h  HighlightManager.cpp  HighlightManager.h  HubUsersMap.h  MediaInfo.h  RawManager.cpp  RawManager.h  RegEx.h  SSLSocket.cpp  SettingsManager.cpp  SettingsManager.h  TarFile.cpp  Thread.cpp  Thread.h  TimerManager.cpp  TimerManager.h  Util.cpp  version.h
BMDC/linux/: AboutConfigFav.cc  SearchEntry.cc  SearchEntry.hh  Shortcuts.hh  UserCommandMenu.cc  WulforUtil.cc  cmddebug.hh  detectiontab.hh  diskinfo.cc  emoticonsdialog.cc  entry.cc  favoritehubs.hh  favoriteusers.hh  finishedtransfers.hh  hashdialog.hh  hub.cc  mainwindow.cc  uploadqueue.cc  wulformanager.cc
BMDC/po/: bmdc.pot
dcpp/: AVManager.cpp  ActionRaw.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  BufferedSocket.cpp  Client.cpp  Client.h  ClientManager.cpp  ConnectionManager.cpp  ConnectionManager.h  CryptoManager.cpp  DCPlusPlus.cpp  DetectionManager.cpp  Exception.h  FavoriteManager.cpp  File.cpp  GeoIP.cpp  GeoIPc.h  GeoManager.cpp  GeoManager.h  HubSettings.cpp  MappingManager.cpp  NmdcHub.cpp  OnlineUser.h  PluginApiImpl.cpp  SearchManager.cpp  SettingsManager.cpp  ShareManager.cpp  SimpleXMLReader.cpp  Socket.cpp  UploadManager.cpp  User.cpp  UserConnection.cpp  UserConnection.h  UserManager.h  Util.cpp  Util.h  format.h  (+3 more)
gtkmm/: bmpp  book.hh  build.sh  favoritehubs.hh  main.cpp  mainwindow.cpp  mainwindow.hh  notepad.hh
linux/: AboutConfig.cc  AboutConfig.hh  AboutConfigFav.cc  AboutConfigFav.hh  FavoriteHubDialog.cc  FavoriteHubDialog.hh  GuiUtil.hh  IgnoreTempManager.cc  IgnoreTempManager.hh  ShellCommand.cc  ShellCommand.hh  Splash.hh  System.cc  UserCommandMenu.hh  WulforUtil.cc  adlsearch.cc  adlsearch.hh  bookentry.cc  cmddebug.cc  detectiontab.cc  dialogentry.hh  downloadqueue.cc  downloadqueue.hh  emoticons.cc  emoticonsdialog.cc  emoticonsdialog.hh  entry.hh  favoritehubs.cc  favoritehubs.hh  favoriteusers.cc  favoriteusers.hh  finishedtransfers.cc  hub.cc  hub.hh  ignoremenu.cc  ignoremenu.hh  mainwindow.cc  mainwindow.hh  meson.build  notepad.cc  (+29 more)
po/: bmdc.pot
settings/: ChatPage.cpp  GeneralPage.cpp  HigDialog.cpp  NotifyPage.cpp  TabsPage.cpp
ui/: hub.ui  settingsdialog.ui
