cmake_minimum_required(VERSION 3.3)
project(bmdc___s)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    dcpp/ActionRaw.h
    dcpp/AdcCommand.cpp
    dcpp/AdcCommand.h
    dcpp/AdcHub.cpp
    dcpp/AdcHub.h
    dcpp/ADLSearch.cpp
    dcpp/ADLSearch.h
    dcpp/AVManager.cpp
    dcpp/AVManager.h
    dcpp/BackupManager.cpp
    dcpp/BackupManager.h
    dcpp/BloomFilter.h
    dcpp/BMDCUtil.cpp
    dcpp/BMDCUtil.h
    dcpp/BufferedSocket.cpp
    dcpp/BufferedSocket.h
    dcpp/BufferedSocketListener.h
    dcpp/BZUtils.cpp
    dcpp/BZUtils.h
    dcpp/CalcADLAction.h
    dcpp/ChatMessage.cpp
    dcpp/ChatMessage.h
    dcpp/CID.cpp
    dcpp/CID.h
    dcpp/Client.cpp
    dcpp/Client.h
    dcpp/ClientListener.h
    dcpp/ClientManager.cpp
    dcpp/ClientManager.h
    dcpp/ClientManagerListener.h
    dcpp/ColorSettings.h
    dcpp/CommandQueue.cpp
    dcpp/CommandQueue.h
    dcpp/compiler.h
    dcpp/ConnectionManager.cpp
    dcpp/ConnectionManager.h
    dcpp/ConnectionManagerListener.h
    dcpp/ConnectivityManager.cpp
    dcpp/ConnectivityManager.h
    dcpp/CriticalSection.h
    dcpp/CryptoManager.cpp
    dcpp/CryptoManager.h
    dcpp/DCPlusPlus.cpp
    dcpp/DCPlusPlus.h
    dcpp/debug.h
    dcpp/DebugManager.cpp
    dcpp/DebugManager.h
    dcpp/DetectionEntry.h
    dcpp/DetectionManager.cpp
    dcpp/DetectionManager.h
    dcpp/DirectoryListing.cpp
    dcpp/DirectoryListing.h
    dcpp/Download.cpp
    dcpp/Download.h
    dcpp/DownloadManager.cpp
    dcpp/DownloadManager.h
    dcpp/DownloadManagerListener.h
    dcpp/Encoder.cpp
    dcpp/Encoder.h
    dcpp/Exception.cpp
    dcpp/Exception.h
    dcpp/ExportManager.cpp
    dcpp/ExportManager.h
    dcpp/FakeChecker.cpp
    dcpp/FakeChecker.h
    dcpp/FavHubGroup.h
    dcpp/FavoriteManager.cpp
    dcpp/FavoriteManager.h
    dcpp/FavoriteManagerListener.h
    dcpp/FavoriteUser.h
    dcpp/File.cpp
    dcpp/File.h
    dcpp/FileReader.cpp
    dcpp/FileReader.h
    dcpp/FilteredFile.h
    dcpp/FinishedItem.cpp
    dcpp/FinishedItem.h
    dcpp/FinishedManager.cpp
    dcpp/FinishedManager.h
    dcpp/FinishedManagerListener.h
    dcpp/Flags.h
    dcpp/format.h
    dcpp/forward.h
    dcpp/GeoIP.cpp
    dcpp/GeoIP.h
    dcpp/GeoManager.cpp
    dcpp/GeoManager.h
    dcpp/GetSet.h
    dcpp/HashBloom.cpp
    dcpp/HashBloom.h
    dcpp/HashManager.cpp
    dcpp/HashManager.h
    dcpp/HashManagerListener.h
    dcpp/HashValue.h
    dcpp/HighlightManager.cpp
    dcpp/HighlightManager.h
    dcpp/HintedUser.h
    dcpp/HttpConnection.cpp
    dcpp/HttpConnection.h
    dcpp/HttpConnectionListener.h
    dcpp/HttpDownload.cpp
    dcpp/HttpDownload.h
    dcpp/HubEntry.h
    dcpp/HubSettings.cpp
    dcpp/HubSettings.h
    dcpp/HubUsersMap.h
    dcpp/LogManager.cpp
    dcpp/LogManager.h
    dcpp/LogManagerListener.h
    dcpp/Mapper.cpp
    dcpp/Mapper.h
    dcpp/Mapper_MiniUPnPc.cpp
    dcpp/Mapper_MiniUPnPc.h
    dcpp/Mapper_NATPMP.cpp
    dcpp/Mapper_NATPMP.h
    dcpp/MappingManager.cpp
    dcpp/MappingManager.h
    dcpp/MD5Hash.h
    dcpp/MediaInfo.h
    dcpp/MerkleCheckOutputStream.h
    dcpp/MerkleTree.h
    dcpp/NmdcHub.cpp
    dcpp/NmdcHub.h
    dcpp/noexcept.h
    dcpp/nullptr.h
    dcpp/OnlineUser.h
    dcpp/PluginApiImpl.cpp
    dcpp/PluginApiImpl.h
    dcpp/PluginDefs.h
    dcpp/PluginEntity.h
    dcpp/PluginManager.cpp
    dcpp/PluginManager.h
    dcpp/Pointer.h
    dcpp/QueueItem.cpp
    dcpp/QueueItem.h
    dcpp/QueueManager.cpp
    dcpp/QueueManager.h
    dcpp/QueueManagerListener.h
    dcpp/RawManager.cpp
    dcpp/RawManager.h
    dcpp/RegEx.h
    dcpp/ScopedFunctor.h
    dcpp/SearchManager.cpp
    dcpp/SearchManager.h
    dcpp/SearchManagerListener.h
    dcpp/SearchResult.cpp
    dcpp/SearchResult.h
    dcpp/Segment.h
    dcpp/Semaphore.h
    dcpp/SettingsManager.cpp
    dcpp/SettingsManager.h
    dcpp/SFVReader.cpp
    dcpp/SFVReader.h
    dcpp/SHA1Hash.h
    dcpp/ShareManager.cpp
    dcpp/ShareManager.h
    dcpp/SimpleXML.cpp
    dcpp/SimpleXML.h
    dcpp/SimpleXMLReader.cpp
    dcpp/SimpleXMLReader.h
    dcpp/Singleton.h
    dcpp/Socket.cpp
    dcpp/Socket.h
    dcpp/Speaker.h
    dcpp/SSL.cpp
    dcpp/SSL.h
    dcpp/SSLSocket.cpp
    dcpp/SSLSocket.h
    dcpp/stdinc.cpp
    dcpp/stdinc.h
    dcpp/Streams.h
    dcpp/StringMatch.cpp
    dcpp/StringMatch.h
    dcpp/StringSearch.h
    dcpp/StringTokenizer.cpp
    dcpp/StringTokenizer.h
    dcpp/TarFile.cpp
    dcpp/TarFile.h
    dcpp/TaskQueue.h
    dcpp/Text.cpp
    dcpp/Text.h
    dcpp/Thread.cpp
    dcpp/Thread.h
    dcpp/ThrottleManager.cpp
    dcpp/ThrottleManager.h
    dcpp/TigerHash.cpp
    dcpp/TigerHash.h
    dcpp/TimerManager.cpp
    dcpp/TimerManager.h
    dcpp/Transfer.cpp
    dcpp/Transfer.h
    dcpp/typedefs.h
    dcpp/Upload.cpp
    dcpp/Upload.h
    dcpp/UploadManager.cpp
    dcpp/UploadManager.h
    dcpp/UploadManagerListener.h
    dcpp/User.cpp
    dcpp/User.h
    dcpp/UserCommand.cpp
    dcpp/UserCommand.h
    dcpp/UserConnection.cpp
    dcpp/UserConnection.h
    dcpp/UserConnectionListener.h
    dcpp/Util.cpp
    dcpp/Util.h
    dcpp/version.cpp
    dcpp/version.h
    dcpp/ZUtils.cpp
    dcpp/ZUtils.h
    linux/AboutConfig.cc
    linux/AboutConfig.hh
    linux/adlsearch.cc
    linux/adlsearch.hh
    linux/bacon-message-connection.cc
    linux/bacon-message-connection.hh
    linux/bookentry.cc
    linux/bookentry.hh
    linux/cmddebug.cc
    linux/cmddebug.hh
    linux/detectiontab.cc
    linux/detectiontab.hh
    linux/dialogentry.cc
    linux/dialogentry.hh
    linux/downloadqueue.cc
    linux/downloadqueue.hh
    linux/emoticons.cc
    linux/emoticons.hh
    linux/emoticonsdialog.cc
    linux/emoticonsdialog.hh
    linux/entry.cc
    linux/entry.hh
    linux/exportimport.cc
    linux/exportimport.hh
    linux/FavoriteHubDialog.cc
    linux/FavoriteHubDialog.hh
    linux/favoritehubs.cc
    linux/favoritehubs.hh
    linux/favoriteusers.cc
    linux/favoriteusers.hh
    linux/finishedtransfers.cc
    linux/finishedtransfers.hh
    linux/freespace.cc
    linux/freespace.h
    linux/fsusage.cc
    linux/fsusage.h
    linux/func.hh
    linux/gtk-fixies.hh
    linux/hashdialog.cc
    linux/hashdialog.hh
    linux/hub.cc
    linux/hub.hh
    linux/mainwindow.cc
    linux/mainwindow.hh
    linux/message.hh
    linux/notepad.cc
    linux/notepad.hh
    linux/notify.cc
    linux/notify.hh
    linux/previewmenu.cc
    linux/previewmenu.hh
    linux/privatemessage.cc
    linux/privatemessage.hh
    linux/publichubs.cc
    linux/publichubs.hh
    linux/recenthub.cc
    linux/recenthub.hh
    linux/search.cc
    linux/search.hh
    linux/SearchEntry.cc
    linux/SearchEntry.hh
    linux/searchspy.cc
    linux/searchspy.hh
    linux/settingsdialog.cc
    linux/settingsdialog.hh
    linux/settingsmanager.cc
    linux/settingsmanager.hh
    linux/sharebrowser.cc
    linux/sharebrowser.hh
    linux/ShellCommand.cc
    linux/ShellCommand.hh
    linux/sound.cc
    linux/sound.hh
    linux/Splash.hh
    linux/stacktrace.cc
    linux/stacktrace.hh
    linux/System.cc
    linux/System.hh
    linux/transfers.cc
    linux/transfers.hh
    linux/treeview.cc
    linux/treeview.hh
    linux/uploadqueue.cc
    linux/uploadqueue.hh
    linux/UserCommandMenu.cc
    linux/UserCommandMenu.hh
    linux/version.hh
    linux/wulfor.cc
    linux/wulformanager.cc
    linux/wulformanager.hh
    linux/WulforUtil.cc
    linux/WulforUtil.hh
    miniupnpc/bsdqueue.h
    miniupnpc/codelength.h
    miniupnpc/connecthostport.c
    miniupnpc/connecthostport.h
    miniupnpc/declspec.h
    miniupnpc/igd_desc_parse.c
    miniupnpc/igd_desc_parse.h
    miniupnpc/minisoap.c
    miniupnpc/minisoap.h
    miniupnpc/minissdpc.c
    miniupnpc/minissdpc.h
    miniupnpc/miniupnpc.c
    miniupnpc/miniupnpc.h
    miniupnpc/miniupnpcstrings.h
    miniupnpc/miniupnpctypes.h
    miniupnpc/miniwget.c
    miniupnpc/miniwget.h
    miniupnpc/minixml.c
    miniupnpc/minixml.h
    miniupnpc/portlistingparse.c
    miniupnpc/portlistingparse.h
    miniupnpc/receivedata.c
    miniupnpc/receivedata.h
    miniupnpc/upnpcommands.c
    miniupnpc/upnpcommands.h
    miniupnpc/upnperrors.c
    miniupnpc/upnperrors.h
    miniupnpc/upnpreplyparse.c
    miniupnpc/upnpreplyparse.h
    natpmp/declspec.h
    natpmp/getgateway.c
    natpmp/getgateway.h
    natpmp/natpmp.c
    natpmp/natpmp.h
    natpmp/wingettimeofday.c
    natpmp/wingettimeofday.h
    settings/AdvancedConnectionPage.cpp
    settings/AdvancedConnectionPage.hh
    settings/ApearencePage.cpp
    settings/ApearencePage.hh
    settings/ChatPage.cpp
    settings/ChatPage.hh
    settings/ConnectionPage.cpp
    settings/ConnectionPage.hh
    settings/definitons.hh
    settings/DownloadsPage.cpp
    settings/DownloadsPage.hh
    settings/DownloadToPage.cpp
    settings/DownloadToPage.hh
    settings/ExtraSharePage.cpp
    settings/ExtraSharePage.hh
    settings/GeneralPage.cpp
    settings/GeneralPage.hh
    settings/HigDialog.cpp
    settings/HigDialog.hh
    settings/HiglitingPage.cpp
    settings/HiglitingPage.hh
    settings/NotifyPage.cpp
    settings/NotifyPage.hh
    settings/OtherApearencePage.cpp
    settings/OtherApearencePage.hh
    settings/OutConnectionPage.cpp
    settings/OutConnectionPage.hh
    settings/PreviewPage.cpp
    settings/PreviewPage.hh
    settings/QuenePage.cpp
    settings/QuenePage.hh
    settings/SettingsDialog.cpp
    settings/SettingsDialog.hh
    settings/SettingsPage.hh
    settings/seUtil.hh
    settings/SharingPage.cpp
    settings/SharingPage.hh
    settings/SoundPage.cpp
    settings/SoundPage.hh
    settings/TabsPage.cpp
    settings/TabsPage.hh
    settings/WindowPage.cpp
    settings/WindowPage.hh
    BMDC-Changelog.txt
    BMDC-Readme.txt
    clang.sh
    License.txt
    Makefile
    SConstruct)

add_executable(bmdc___s ${SOURCE_FILES})